Fix dark mode

--- a/community-website/styles/Home.module.css
+++ b/community-website/styles/Home.module.css
@@ -129,9 +129,6 @@
   .footer {
     border-color: #222;
   }
-  .code {
-    background: #111;
-  }
   .logo img {
     filter: invert(1);
   }
